# napari-meshio

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: plugin_preview.yml  test_and_deploy.yml
src/napari_meshio/: __init__.py  _available_file_formats.py  _reader.py  _sample_data.py  _writer.py  napari.yaml
src/napari_meshio/_tests/: test_reader.py  test_sample_data.py  test_writer.py
