[metadata]
name = napari-meshio

description = I/O for mesh files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GenevieveBuckley/napari-meshio
author = Genevieve Buckley
author_email = yourname@example.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/GenevieveBuckley/napari-meshio/issues
    Documentation = https://github.com/GenevieveBuckley/napari-meshio#README.md
    Source Code = https://github.com/GenevieveBuckley/napari-meshio
    User Support = https://github.com/GenevieveBuckley/napari-meshio/issues

[options]
packages = find:
install_requires =
    numpy
    meshio
    pooch

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-meshio = napari_meshio:napari.yaml

[options.extras_require]
testing =
    napari
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/

[options.package_data]
* = *.yaml
